# nannou-sketches

./: .gitignore  Cargo.toml  README.md  testy.txt
180420_square-shades/: Cargo.toml  README.md
190420_screen-square-detector/: README.md
200420_silly-linear-interpolation/: Cargo.toml  README.md
230420_psych_square/: Cargo.toml  README.md
230420_psych_square/src/: main.rs
audiotest/: Cargo.toml  README.md
basic-osc-receiver/: Cargo.toml  README.md
basic-patterns1/: Cargo.toml  README.md  pat.scd
basic-patterns1/src/: main.rs  noteevent.rs  oscevent.rs  scevent.rs
basic-patterns1/supercollider/: pat.scd
fileplayer/: Cargo.toml  README.md
scpat1/: Cargo.toml  README.md
screen-square-detector/: Cargo.toml  README.md
silly-linear-interpolation/: Cargo.toml  README.md
simple-sampler/: Cargo.toml  README.md
simple-sampler/src/: main.rs
simple_sine/: Cargo.toml  README.md
simple_sine/src/: main.rs
sketch-190420/: Cargo.toml  README.md
sketch-190420-1/: README.md
sketch-190420-1/src/: main.rs
sketch-200420/: Cargo.toml  README.md
sketch-200420/src/: main.rs
sketch-220420/: Cargo.toml  README.md
sketch-220420-1/: Cargo.toml  README.md
sketch-230420/: Cargo.toml  README.md
sketch-230420/src/: main.rs
sketch-240420/: Cargo.toml  README.md
squary-shades/: Cargo.toml  README.md
squary-shades/src/: main.rs
viz/: Cargo.toml  README.md
