[package]
name = "basic-osc-receiver"
version = "0.1.0"
authors = ["mads kjeldgaard <mail@madskjeldgaard.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.14.0" # A Creative Coding Framework for Rust.
