[package]
name = "basic-patterns1"
version = "0.1.0"
authors = ["mads kjeldgaard <mail@madskjeldgaard.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.14" # A Creative Coding Framework for Rust.
nannou_osc = "0.1.0"    # The OSC API for Nannou, the creative coding framework.
