[package]
name = "simple_sine"
version = "0.1.0"
authors = ["mads kjeldgaard <mail@madskjeldgaard.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.14.1" # A Creative Coding Framework for Rust.
nannou_audio = "0.14.0"       # The audio API for Nannou, the creative coding framework.
